refactor after cr